# Vice

./: .SRCINFO  .gitignore  PKGBUILD  README.md  install.sh  pyproject.toml  requirements.txt  vice.desktop
packaging/appimage/: appimage-builder.yml  build.sh
packaging/flatpak/: build.sh  com.vice.Vice.metainfo.xml  com.vice.Vice.yml
tests/: test_runtime_and_recorder.py  test_share_server.py
vice/: __init__.py  app.py  audio.py  config.py  hotkey.py  main.py  recorder.py  share.py
vice/ui/: index.html
