[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vice"
version = "0.1.0"
description = "Linux game clip recorder — like Medal.tv, for Wayland and X11"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "evdev>=1.6.1",
    "aiohttp>=3.9.0",
    "click>=8.1.7",
    "tomli>=2.0.1; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "psutil>=5.9.0",
    "pywebview>=5.0",
]

[project.optional-dependencies]
# Flatpak builds use the system WebKit; skip pywebview install there
no-webview = []

[project.scripts]
vice     = "vice.main:cli"
vice-app = "vice.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vice*"]

[tool.setuptools.package-data]
vice = ["ui/*"]
